// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Asyncs actions Function fetchByLetter:: create 2 actions (REQUEST_POSTS & RECEIVE_POSTS) and fetch all characters which name begin by 'a' 1`] = `
Array [
  Object {
    "category": "characters",
    "requestId": "a",
    "type": "REQUEST_POSTS",
  },
  Object {
    "category": "characters",
    "posts": Array [
      Object {
        "comics": Object {
          "available": 0,
          "collectionURI": "http://gateway.marvel.com/v1/public/characters/1017100/comics",
          "items": Array [],
          "returned": 0,
        },
        "description": "Rick Jones has been Hulk's best bud since day one, but now he's more than a friend...he's a teammate! Transformed by a Gamma energy explosion, A-Bomb's thick, armored skin is just as strong and powerful as it is blue. And when he curls into action, he uses it like a giant bowling ball of destruction! ",
        "events": Object {
          "available": 0,
          "collectionURI": "http://gateway.marvel.com/v1/public/characters/1017100/events",
          "items": Array [],
          "returned": 0,
        },
        "id": 1017100,
        "modified": "2013-09-18T15:54:04-0400",
        "name": "A-Bomb (HAS)",
        "resourceURI": "http://gateway.marvel.com/v1/public/characters/1017100",
        "series": Object {
          "available": 0,
          "collectionURI": "http://gateway.marvel.com/v1/public/characters/1017100/series",
          "items": Array [],
          "returned": 0,
        },
        "stories": Object {
          "available": 1,
          "collectionURI": "http://gateway.marvel.com/v1/public/characters/1017100/stories",
          "items": Array [
            Object {
              "name": "cover from Free Comic Book Day 2013 (Avengers/Hulk) (2013) #1",
              "resourceURI": "http://gateway.marvel.com/v1/public/stories/105929",
              "type": "cover",
            },
          ],
          "returned": 1,
        },
        "thumbnail": Object {
          "extension": "jpg",
          "path": "http://i.annihil.us/u/prod/marvel/i/mg/3/20/5232158de5b16",
        },
        "urls": Array [
          Object {
            "type": "detail",
            "url": "http://marvel.com/characters/76/a-bomb?utm_campaign=apiRef&utm_source=dadf1ca6c54468f0ed5cdbb80d4b1f97",
          },
          Object {
            "type": "comiclink",
            "url": "http://marvel.com/comics/characters/1017100/a-bomb_has?utm_campaign=apiRef&utm_source=dadf1ca6c54468f0ed5cdbb80d4b1f97",
          },
        ],
      },
    ],
    "receivedAt": 1482363367071,
    "requestId": "a",
    "type": "RECEIVE_POSTS",
  },
]
`;

exports[`Asyncs actions Function fetchCategory:: create 2 actions (REQUEST_POSTS & RECEIVE_POSTS) and fetch the first 20 characters 1`] = `
Array [
  Object {
    "category": "characters",
    "requestId": "characters?limit=20&offset=0",
    "type": "REQUEST_POSTS",
  },
  Object {
    "category": "characters",
    "posts": Array [
      Object {
        "comics": Object {
          "available": 12,
          "collectionURI": "http://gateway.marvel.com/v1/public/characters/1011334/comics",
          "items": Array [
            Object {
              "name": "Avengers: The Initiative (2007) #14",
              "resourceURI": "http://gateway.marvel.com/v1/public/comics/21366",
            },
            Object {
              "name": "Avengers: The Initiative (2007) #14 (SPOTLIGHT VARIANT)",
              "resourceURI": "http://gateway.marvel.com/v1/public/comics/24571",
            },
            Object {
              "name": "Avengers: The Initiative (2007) #15",
              "resourceURI": "http://gateway.marvel.com/v1/public/comics/21546",
            },
            Object {
              "name": "Avengers: The Initiative (2007) #16",
              "resourceURI": "http://gateway.marvel.com/v1/public/comics/21741",
            },
            Object {
              "name": "Avengers: The Initiative (2007) #17",
              "resourceURI": "http://gateway.marvel.com/v1/public/comics/21975",
            },
            Object {
              "name": "Avengers: The Initiative (2007) #18",
              "resourceURI": "http://gateway.marvel.com/v1/public/comics/22299",
            },
            Object {
              "name": "Avengers: The Initiative (2007) #18 (ZOMBIE VARIANT)",
              "resourceURI": "http://gateway.marvel.com/v1/public/comics/22300",
            },
            Object {
              "name": "Avengers: The Initiative (2007) #19",
              "resourceURI": "http://gateway.marvel.com/v1/public/comics/22506",
            },
            Object {
              "name": "Deadpool (1997) #44",
              "resourceURI": "http://gateway.marvel.com/v1/public/comics/8500",
            },
            Object {
              "name": "Marvel Premiere (1972) #35",
              "resourceURI": "http://gateway.marvel.com/v1/public/comics/10223",
            },
            Object {
              "name": "Marvel Premiere (1972) #36",
              "resourceURI": "http://gateway.marvel.com/v1/public/comics/10224",
            },
            Object {
              "name": "Marvel Premiere (1972) #37",
              "resourceURI": "http://gateway.marvel.com/v1/public/comics/10225",
            },
          ],
          "returned": 12,
        },
        "description": "",
        "events": Object {
          "available": 1,
          "collectionURI": "http://gateway.marvel.com/v1/public/characters/1011334/events",
          "items": Array [
            Object {
              "name": "Secret Invasion",
              "resourceURI": "http://gateway.marvel.com/v1/public/events/269",
            },
          ],
          "returned": 1,
        },
        "id": 1011334,
        "modified": "2014-04-29T14:18:17-0400",
        "name": "3-D Man",
        "resourceURI": "http://gateway.marvel.com/v1/public/characters/1011334",
        "series": Object {
          "available": 3,
          "collectionURI": "http://gateway.marvel.com/v1/public/characters/1011334/series",
          "items": Array [
            Object {
              "name": "Avengers: The Initiative (2007 - 2010)",
              "resourceURI": "http://gateway.marvel.com/v1/public/series/1945",
            },
            Object {
              "name": "Deadpool (1997 - 2002)",
              "resourceURI": "http://gateway.marvel.com/v1/public/series/2005",
            },
            Object {
              "name": "Marvel Premiere (1972 - 1981)",
              "resourceURI": "http://gateway.marvel.com/v1/public/series/2045",
            },
          ],
          "returned": 3,
        },
        "stories": Object {
          "available": 21,
          "collectionURI": "http://gateway.marvel.com/v1/public/characters/1011334/stories",
          "items": Array [
            Object {
              "name": "Cover #19947",
              "resourceURI": "http://gateway.marvel.com/v1/public/stories/19947",
              "type": "cover",
            },
            Object {
              "name": "The 3-D Man!",
              "resourceURI": "http://gateway.marvel.com/v1/public/stories/19948",
              "type": "interiorStory",
            },
            Object {
              "name": "Cover #19949",
              "resourceURI": "http://gateway.marvel.com/v1/public/stories/19949",
              "type": "cover",
            },
            Object {
              "name": "The Devil's Music!",
              "resourceURI": "http://gateway.marvel.com/v1/public/stories/19950",
              "type": "interiorStory",
            },
            Object {
              "name": "Cover #19951",
              "resourceURI": "http://gateway.marvel.com/v1/public/stories/19951",
              "type": "cover",
            },
            Object {
              "name": "Code-Name:  The Cold Warrior!",
              "resourceURI": "http://gateway.marvel.com/v1/public/stories/19952",
              "type": "interiorStory",
            },
            Object {
              "name": "AVENGERS: THE INITIATIVE (2007) #14",
              "resourceURI": "http://gateway.marvel.com/v1/public/stories/47184",
              "type": "cover",
            },
            Object {
              "name": "Avengers: The Initiative (2007) #14 - Int",
              "resourceURI": "http://gateway.marvel.com/v1/public/stories/47185",
              "type": "interiorStory",
            },
            Object {
              "name": "AVENGERS: THE INITIATIVE (2007) #15",
              "resourceURI": "http://gateway.marvel.com/v1/public/stories/47498",
              "type": "cover",
            },
            Object {
              "name": "Avengers: The Initiative (2007) #15 - Int",
              "resourceURI": "http://gateway.marvel.com/v1/public/stories/47499",
              "type": "interiorStory",
            },
            Object {
              "name": "AVENGERS: THE INITIATIVE (2007) #16",
              "resourceURI": "http://gateway.marvel.com/v1/public/stories/47792",
              "type": "cover",
            },
            Object {
              "name": "Avengers: The Initiative (2007) #16 - Int",
              "resourceURI": "http://gateway.marvel.com/v1/public/stories/47793",
              "type": "interiorStory",
            },
            Object {
              "name": "AVENGERS: THE INITIATIVE (2007) #17",
              "resourceURI": "http://gateway.marvel.com/v1/public/stories/48361",
              "type": "cover",
            },
            Object {
              "name": "Avengers: The Initiative (2007) #17 - Int",
              "resourceURI": "http://gateway.marvel.com/v1/public/stories/48362",
              "type": "interiorStory",
            },
            Object {
              "name": "AVENGERS: THE INITIATIVE (2007) #18",
              "resourceURI": "http://gateway.marvel.com/v1/public/stories/49103",
              "type": "cover",
            },
            Object {
              "name": "Avengers: The Initiative (2007) #18 - Int",
              "resourceURI": "http://gateway.marvel.com/v1/public/stories/49104",
              "type": "interiorStory",
            },
            Object {
              "name": "Avengers: The Initiative (2007) #18, Zombie Variant - Int",
              "resourceURI": "http://gateway.marvel.com/v1/public/stories/49106",
              "type": "interiorStory",
            },
            Object {
              "name": "AVENGERS: THE INITIATIVE (2007) #19",
              "resourceURI": "http://gateway.marvel.com/v1/public/stories/49888",
              "type": "cover",
            },
            Object {
              "name": "Avengers: The Initiative (2007) #19 - Int",
              "resourceURI": "http://gateway.marvel.com/v1/public/stories/49889",
              "type": "interiorStory",
            },
            Object {
              "name": "Avengers: The Initiative (2007) #14, Spotlight Variant - Int",
              "resourceURI": "http://gateway.marvel.com/v1/public/stories/54371",
              "type": "interiorStory",
            },
          ],
          "returned": 20,
        },
        "thumbnail": Object {
          "extension": "jpg",
          "path": "http://i.annihil.us/u/prod/marvel/i/mg/c/e0/535fecbbb9784",
        },
        "urls": Array [
          Object {
            "type": "detail",
            "url": "http://marvel.com/characters/74/3-d_man?utm_campaign=apiRef&utm_source=dadf1ca6c54468f0ed5cdbb80d4b1f97",
          },
          Object {
            "type": "wiki",
            "url": "http://marvel.com/universe/3-D_Man_(Chandler)?utm_campaign=apiRef&utm_source=dadf1ca6c54468f0ed5cdbb80d4b1f97",
          },
          Object {
            "type": "comiclink",
            "url": "http://marvel.com/comics/characters/1011334/3-d_man?utm_campaign=apiRef&utm_source=dadf1ca6c54468f0ed5cdbb80d4b1f97",
          },
        ],
      },
    ],
    "receivedAt": 1482363367071,
    "requestId": "characters?limit=20&offset=0",
    "type": "RECEIVE_POSTS",
  },
]
`;

exports[`Asyncs actions Function fetchCharacter:: create 1 actions (SET_RELATED_DATA) and fetch 1 character 1`] = `
Array [
  Object {
    "data": Object {
      "comics": Object {
        "available": 94,
        "collectionURI": "http://gateway.marvel.com/v1/public/characters/1009156/comics",
        "items": Array [
          Object {
            "name": "Avengers (2010) #2",
            "resourceURI": "http://gateway.marvel.com/v1/public/comics/29205",
          },
          Object {
            "name": "Avengers (2010) #3",
            "resourceURI": "http://gateway.marvel.com/v1/public/comics/29206",
          },
          Object {
            "name": "Avengers (2010) #3 (ROMITA JR. VARIANT)",
            "resourceURI": "http://gateway.marvel.com/v1/public/comics/34142",
          },
          Object {
            "name": "Cable (1993) #8",
            "resourceURI": "http://gateway.marvel.com/v1/public/comics/7459",
          },
          Object {
            "name": "Cable (2008) #14",
            "resourceURI": "http://gateway.marvel.com/v1/public/comics/24171",
          },
          Object {
            "name": "Cable (2008) #14 (OLIVETTI MW, 50/50 COVER)",
            "resourceURI": "http://gateway.marvel.com/v1/public/comics/24172",
          },
          Object {
            "name": "Cable (2008) #15",
            "resourceURI": "http://gateway.marvel.com/v1/public/comics/24631",
          },
          Object {
            "name": "Cable (2008) #15 (OLIVETTI (MW, 50/50 COVER))",
            "resourceURI": "http://gateway.marvel.com/v1/public/comics/24632",
          },
          Object {
            "name": "Cable (1993) #35",
            "resourceURI": "http://gateway.marvel.com/v1/public/comics/7410",
          },
          Object {
            "name": "Cable (1993) #66",
            "resourceURI": "http://gateway.marvel.com/v1/public/comics/7444",
          },
          Object {
            "name": "Cable (1993) #75",
            "resourceURI": "http://gateway.marvel.com/v1/public/comics/7454",
          },
          Object {
            "name": "Essential X-Factor Vol. 2 (All-New Edition) (Trade Paperback)",
            "resourceURI": "http://gateway.marvel.com/v1/public/comics/39445",
          },
          Object {
            "name": "Extraordinary X-Men Vol. 3: Kingdoms Fall (Trade Paperback)",
            "resourceURI": "http://gateway.marvel.com/v1/public/comics/55262",
          },
          Object {
            "name": "Further Adventures of Cyclops & Phoenix (1996) #4",
            "resourceURI": "http://gateway.marvel.com/v1/public/comics/60188",
          },
          Object {
            "name": "Incredible Hulk (1962) #456",
            "resourceURI": "http://gateway.marvel.com/v1/public/comics/9267",
          },
          Object {
            "name": "Mystic Comics 70th Anniversary Special (2009) #1 (MARTIN VARIANT)",
            "resourceURI": "http://gateway.marvel.com/v1/public/comics/26022",
          },
          Object {
            "name": "Official Handbook of the Marvel Universe (2004) #8",
            "resourceURI": "http://gateway.marvel.com/v1/public/comics/1489",
          },
          Object {
            "name": "Official Handbook of the Marvel Universe (2004) #9 (THE WOMEN OF MARVEL)",
            "resourceURI": "http://gateway.marvel.com/v1/public/comics/1590",
          },
          Object {
            "name": "Official Handbook of the Marvel Universe (2004) #10 (MARVEL KNIGHTS)",
            "resourceURI": "http://gateway.marvel.com/v1/public/comics/1689",
          },
          Object {
            "name": "Official Handbook of the Marvel Universe (2004) #11 (X-MEN - AGE OF APOCALYPSE)",
            "resourceURI": "http://gateway.marvel.com/v1/public/comics/1749",
          },
        ],
        "returned": 20,
      },
      "description": "",
      "events": Object {
        "available": 6,
        "collectionURI": "http://gateway.marvel.com/v1/public/characters/1009156/events",
        "items": Array [
          Object {
            "name": "Acts of Vengeance!",
            "resourceURI": "http://gateway.marvel.com/v1/public/events/116",
          },
          Object {
            "name": "Age of Apocalypse",
            "resourceURI": "http://gateway.marvel.com/v1/public/events/227",
          },
          Object {
            "name": "Evolutionary War",
            "resourceURI": "http://gateway.marvel.com/v1/public/events/246",
          },
          Object {
            "name": "Fall of the Mutants",
            "resourceURI": "http://gateway.marvel.com/v1/public/events/248",
          },
          Object {
            "name": "Messiah War",
            "resourceURI": "http://gateway.marvel.com/v1/public/events/298",
          },
          Object {
            "name": "Onslaught",
            "resourceURI": "http://gateway.marvel.com/v1/public/events/154",
          },
        ],
        "returned": 6,
      },
      "id": 1009156,
      "modified": "2013-10-18T12:48:43-0400",
      "name": "Apocalypse",
      "resourceURI": "http://gateway.marvel.com/v1/public/characters/1009156",
      "series": Object {
        "available": 48,
        "collectionURI": "http://gateway.marvel.com/v1/public/characters/1009156/series",
        "items": Array [
          Object {
            "name": "Avengers (2010 - 2012)",
            "resourceURI": "http://gateway.marvel.com/v1/public/series/9085",
          },
          Object {
            "name": "Cable (1993 - 2002)",
            "resourceURI": "http://gateway.marvel.com/v1/public/series/1995",
          },
          Object {
            "name": "Cable (2008 - 2010)",
            "resourceURI": "http://gateway.marvel.com/v1/public/series/4002",
          },
          Object {
            "name": "Essential X-Factor Vol. 2 (All-New Edition) (2011 - Present)",
            "resourceURI": "http://gateway.marvel.com/v1/public/series/14400",
          },
          Object {
            "name": "Extraordinary X-Men Vol. 3: Kingdoms Fall (2017)",
            "resourceURI": "http://gateway.marvel.com/v1/public/series/20418",
          },
          Object {
            "name": "Further Adventures of Cyclops & Phoenix (1996)",
            "resourceURI": "http://gateway.marvel.com/v1/public/series/22173",
          },
          Object {
            "name": "Incredible Hulk (1962 - 1999)",
            "resourceURI": "http://gateway.marvel.com/v1/public/series/2021",
          },
          Object {
            "name": "Mystic Comics 70th Anniversary Special (2009)",
            "resourceURI": "http://gateway.marvel.com/v1/public/series/8138",
          },
          Object {
            "name": "Official Handbook of the Marvel Universe (2004)",
            "resourceURI": "http://gateway.marvel.com/v1/public/series/787",
          },
          Object {
            "name": "Onslaught: Marvel Universe (1996)",
            "resourceURI": "http://gateway.marvel.com/v1/public/series/2057",
          },
          Object {
            "name": "Rise of Apocalypse (1996 - 1997)",
            "resourceURI": "http://gateway.marvel.com/v1/public/series/22174",
          },
          Object {
            "name": "Stryfe's Strike File (1993)",
            "resourceURI": "http://gateway.marvel.com/v1/public/series/17927",
          },
          Object {
            "name": "Uncanny Avengers (2012 - Present)",
            "resourceURI": "http://gateway.marvel.com/v1/public/series/16414",
          },
          Object {
            "name": "Uncanny X-Force (2010 - 2012)",
            "resourceURI": "http://gateway.marvel.com/v1/public/series/9976",
          },
          Object {
            "name": "Uncanny X-Men (1963 - 2011)",
            "resourceURI": "http://gateway.marvel.com/v1/public/series/2258",
          },
          Object {
            "name": "What If? X-Men Age of Apocalypse (2006)",
            "resourceURI": "http://gateway.marvel.com/v1/public/series/1075",
          },
          Object {
            "name": "What If?: Event Horizon (2007)",
            "resourceURI": "http://gateway.marvel.com/v1/public/series/2425",
          },
          Object {
            "name": "Wolverine (1988 - 2003)",
            "resourceURI": "http://gateway.marvel.com/v1/public/series/2262",
          },
          Object {
            "name": "Wolverine/Deadpool: Weapon X (1999)",
            "resourceURI": "http://gateway.marvel.com/v1/public/series/84",
          },
          Object {
            "name": "Wolverine: The Jungle Adventure (1989)",
            "resourceURI": "http://gateway.marvel.com/v1/public/series/23663",
          },
        ],
        "returned": 20,
      },
      "stories": Object {
        "available": 94,
        "collectionURI": "http://gateway.marvel.com/v1/public/characters/1009156/stories",
        "items": Array [
          Object {
            "name": "Cover #477",
            "resourceURI": "http://gateway.marvel.com/v1/public/stories/477",
            "type": "cover",
          },
          Object {
            "name": "X-MEN (2004) #183",
            "resourceURI": "http://gateway.marvel.com/v1/public/stories/664",
            "type": "cover",
          },
          Object {
            "name": "X-MEN (2004) #184",
            "resourceURI": "http://gateway.marvel.com/v1/public/stories/666",
            "type": "cover",
          },
          Object {
            "name": "X-MEN (2004) #185",
            "resourceURI": "http://gateway.marvel.com/v1/public/stories/668",
            "type": "cover",
          },
          Object {
            "name": "Cover #4153",
            "resourceURI": "http://gateway.marvel.com/v1/public/stories/4153",
            "type": "cover",
          },
          Object {
            "name": "Cover #4223",
            "resourceURI": "http://gateway.marvel.com/v1/public/stories/4223",
            "type": "cover",
          },
          Object {
            "name": "Cover #4430",
            "resourceURI": "http://gateway.marvel.com/v1/public/stories/4430",
            "type": "cover",
          },
          Object {
            "name": "Cover #4513",
            "resourceURI": "http://gateway.marvel.com/v1/public/stories/4513",
            "type": "cover",
          },
          Object {
            "name": "Cover #4612",
            "resourceURI": "http://gateway.marvel.com/v1/public/stories/4612",
            "type": "cover",
          },
          Object {
            "name": "Cover #4614",
            "resourceURI": "http://gateway.marvel.com/v1/public/stories/4614",
            "type": "cover",
          },
          Object {
            "name": "Cover #5919",
            "resourceURI": "http://gateway.marvel.com/v1/public/stories/5919",
            "type": "cover",
          },
          Object {
            "name": "...Meet War!",
            "resourceURI": "http://gateway.marvel.com/v1/public/stories/19075",
            "type": "cover",
          },
          Object {
            "name": "Whose Death Is It, Anyway?",
            "resourceURI": "http://gateway.marvel.com/v1/public/stories/22203",
            "type": "interiorStory",
          },
          Object {
            "name": "Die, Mutants, Die!",
            "resourceURI": "http://gateway.marvel.com/v1/public/stories/22207",
            "type": "interiorStory",
          },
          Object {
            "name": "The Horsemen of Apocalypse",
            "resourceURI": "http://gateway.marvel.com/v1/public/stories/22210",
            "type": "cover",
          },
          Object {
            "name": "You Say You Want Some Evolution?",
            "resourceURI": "http://gateway.marvel.com/v1/public/stories/22221",
            "type": "interiorStory",
          },
          Object {
            "name": "Fall of the Mutants",
            "resourceURI": "http://gateway.marvel.com/v1/public/stories/22222",
            "type": "cover",
          },
          Object {
            "name": "Fall of the Mutants",
            "resourceURI": "http://gateway.marvel.com/v1/public/stories/22224",
            "type": "cover",
          },
          Object {
            "name": "Gifts!",
            "resourceURI": "http://gateway.marvel.com/v1/public/stories/22229",
            "type": "interiorStory",
          },
          Object {
            "name": "Guardian",
            "resourceURI": "http://gateway.marvel.com/v1/public/stories/22273",
            "type": "interiorStory",
          },
        ],
        "returned": 20,
      },
      "thumbnail": Object {
        "extension": "jpg",
        "path": "http://i.annihil.us/u/prod/marvel/i/mg/f/e0/526166076a1d0",
      },
      "urls": Array [
        Object {
          "type": "detail",
          "url": "http://marvel.com/comics/characters/1009156/apocalypse?utm_campaign=apiRef&utm_source=489e135d84bbc1a810a3a8ec86eef28e",
        },
        Object {
          "type": "wiki",
          "url": "http://marvel.com/universe/Apocalypse_(En_Sabah_Nur)?utm_campaign=apiRef&utm_source=489e135d84bbc1a810a3a8ec86eef28e",
        },
        Object {
          "type": "comiclink",
          "url": "http://marvel.com/comics/characters/1009156/apocalypse?utm_campaign=apiRef&utm_source=489e135d84bbc1a810a3a8ec86eef28e",
        },
      ],
    },
    "id": 1009156,
    "type": "SET_RELATED_DATA",
  },
]
`;

exports[`Asyncs actions Function fetchComic:: create 1 actions (SET_RELATED_DATA) and fetch 1 comic 1`] = `
Array [
  Object {
    "data": Object {
      "characters": Object {
        "available": 39,
        "collectionURI": "http://gateway.marvel.com/v1/public/comics/2539/characters",
        "items": Array [
          Object {
            "name": "Abyss",
            "resourceURI": "http://gateway.marvel.com/v1/public/characters/1009149",
          },
          Object {
            "name": "Abyss (Age of Apocalypse)",
            "resourceURI": "http://gateway.marvel.com/v1/public/characters/1010903",
          },
          Object {
            "name": "Apocalypse",
            "resourceURI": "http://gateway.marvel.com/v1/public/characters/1009156",
          },
          Object {
            "name": "Archangel",
            "resourceURI": "http://gateway.marvel.com/v1/public/characters/1009159",
          },
          Object {
            "name": "Aurora",
            "resourceURI": "http://gateway.marvel.com/v1/public/characters/1009163",
          },
          Object {
            "name": "Beast",
            "resourceURI": "http://gateway.marvel.com/v1/public/characters/1009175",
          },
          Object {
            "name": "Bishop",
            "resourceURI": "http://gateway.marvel.com/v1/public/characters/1009182",
          },
          Object {
            "name": "Blink",
            "resourceURI": "http://gateway.marvel.com/v1/public/characters/1009197",
          },
          Object {
            "name": "Blob",
            "resourceURI": "http://gateway.marvel.com/v1/public/characters/1009199",
          },
          Object {
            "name": "Captain Britain",
            "resourceURI": "http://gateway.marvel.com/v1/public/characters/1009223",
          },
          Object {
            "name": "Colossus",
            "resourceURI": "http://gateway.marvel.com/v1/public/characters/1009243",
          },
          Object {
            "name": "Cyclops",
            "resourceURI": "http://gateway.marvel.com/v1/public/characters/1009257",
          },
          Object {
            "name": "Emma Frost",
            "resourceURI": "http://gateway.marvel.com/v1/public/characters/1009310",
          },
          Object {
            "name": "Gambit",
            "resourceURI": "http://gateway.marvel.com/v1/public/characters/1009313",
          },
          Object {
            "name": "Havok",
            "resourceURI": "http://gateway.marvel.com/v1/public/characters/1009337",
          },
          Object {
            "name": "Holocaust (Age of Apocalypse)",
            "resourceURI": "http://gateway.marvel.com/v1/public/characters/1009349",
          },
          Object {
            "name": "Iceman",
            "resourceURI": "http://gateway.marvel.com/v1/public/characters/1009362",
          },
          Object {
            "name": "Jean Grey",
            "resourceURI": "http://gateway.marvel.com/v1/public/characters/1009327",
          },
          Object {
            "name": "Magma (Amara Aquilla)",
            "resourceURI": "http://gateway.marvel.com/v1/public/characters/1009416",
          },
          Object {
            "name": "Magneto",
            "resourceURI": "http://gateway.marvel.com/v1/public/characters/1009417",
          },
        ],
        "returned": 20,
      },
      "collectedIssues": Array [
        Object {
          "name": "Amazing X-Men (1995) #2",
          "resourceURI": "http://gateway.marvel.com/v1/public/comics/17732",
        },
        Object {
          "name": "Factor X (1995) #2",
          "resourceURI": "http://gateway.marvel.com/v1/public/comics/20045",
        },
        Object {
          "name": "Age of Apocalypse: The Chosen (1995) #1",
          "resourceURI": "http://gateway.marvel.com/v1/public/comics/17701",
        },
        Object {
          "name": "Weapon X (1995) #2",
          "resourceURI": "http://gateway.marvel.com/v1/public/comics/18100",
        },
        Object {
          "name": "Gambit and the X-Ternals (1995) #2",
          "resourceURI": "http://gateway.marvel.com/v1/public/comics/16078",
        },
        Object {
          "name": "Gambit and the X-Ternals (1995) #1",
          "resourceURI": "http://gateway.marvel.com/v1/public/comics/16077",
        },
        Object {
          "name": "Weapon X (1995) #1",
          "resourceURI": "http://gateway.marvel.com/v1/public/comics/18099",
        },
        Object {
          "name": "Generation Next (1995) #1",
          "resourceURI": "http://gateway.marvel.com/v1/public/comics/20038",
        },
        Object {
          "name": "Amazing X-Men (1995) #1",
          "resourceURI": "http://gateway.marvel.com/v1/public/comics/17731",
        },
        Object {
          "name": "X-Calibre (1995) #1",
          "resourceURI": "http://gateway.marvel.com/v1/public/comics/18253",
        },
        Object {
          "name": "Factor X (1995) #1",
          "resourceURI": "http://gateway.marvel.com/v1/public/comics/20044",
        },
        Object {
          "name": "X-Men: Alpha (1995) #1",
          "resourceURI": "http://gateway.marvel.com/v1/public/comics/12386",
        },
      ],
      "collections": Array [],
      "creators": Object {
        "available": 53,
        "collectionURI": "http://gateway.marvel.com/v1/public/comics/2539/creators",
        "items": Array [
          Object {
            "name": "Comicraft",
            "resourceURI": "http://gateway.marvel.com/v1/public/creators/807",
            "role": "letterer",
          },
          Object {
            "name": "Pat Brosseau",
            "resourceURI": "http://gateway.marvel.com/v1/public/creators/3626",
            "role": "letterer",
          },
          Object {
            "name": "Chris Eliopoulos",
            "resourceURI": "http://gateway.marvel.com/v1/public/creators/452",
            "role": "letterer",
          },
          Object {
            "name": "Toinay",
            "resourceURI": "http://gateway.marvel.com/v1/public/creators/5991",
            "role": "inker",
          },
          Object {
            "name": "Terry Austin",
            "resourceURI": "http://gateway.marvel.com/v1/public/creators/1836",
            "role": "inker",
          },
          Object {
            "name": "Mark Buckingham",
            "resourceURI": "http://gateway.marvel.com/v1/public/creators/71",
            "role": "inker",
          },
          Object {
            "name": "Kevin Conrad",
            "resourceURI": "http://gateway.marvel.com/v1/public/creators/972",
            "role": "inker",
          },
          Object {
            "name": "Chris Bachalo",
            "resourceURI": "http://gateway.marvel.com/v1/public/creators/232",
            "role": "penciler",
          },
          Object {
            "name": "Ian Churchill",
            "resourceURI": "http://gateway.marvel.com/v1/public/creators/1192",
            "role": "penciler",
          },
          Object {
            "name": "Tony Daniel",
            "resourceURI": "http://gateway.marvel.com/v1/public/creators/354",
            "role": "penciler",
          },
          Object {
            "name": "Steve Buccellato",
            "resourceURI": "http://gateway.marvel.com/v1/public/creators/1909",
            "role": "colorist",
          },
          Object {
            "name": "Digital Chameleon",
            "resourceURI": "http://gateway.marvel.com/v1/public/creators/2974",
            "role": "colorist",
          },
          Object {
            "name": "Electric Crayon",
            "resourceURI": "http://gateway.marvel.com/v1/public/creators/4101",
            "role": "colorist",
          },
          Object {
            "name": "Kelly Corvese",
            "resourceURI": "http://gateway.marvel.com/v1/public/creators/3572",
            "role": "editor",
          },
          Object {
            "name": "Tom DeFalco",
            "resourceURI": "http://gateway.marvel.com/v1/public/creators/9565",
            "role": "editor",
          },
          Object {
            "name": "Suzanne Gaffney",
            "resourceURI": "http://gateway.marvel.com/v1/public/creators/2099",
            "role": "editor",
          },
          Object {
            "name": "Jaye Gardner",
            "resourceURI": "http://gateway.marvel.com/v1/public/creators/2520",
            "role": "editor",
          },
          Object {
            "name": "Roger Cruz",
            "resourceURI": "http://gateway.marvel.com/v1/public/creators/356",
            "role": "penciller",
          },
          Object {
            "name": "Steve Epting",
            "resourceURI": "http://gateway.marvel.com/v1/public/creators/374",
            "role": "penciller",
          },
          Object {
            "name": "Warren Ellis",
            "resourceURI": "http://gateway.marvel.com/v1/public/creators/676",
            "role": "writer",
          },
        ],
        "returned": 20,
      },
      "dates": Array [
        Object {
          "date": "2005-10-05T00:00:00-0400",
          "type": "onsaleDate",
        },
        Object {
          "date": "-0001-11-30T00:00:00-0500",
          "type": "focDate",
        },
      ],
      "description": "See your favorite mutants through a dark glass as the epic that literally rebuilt the X-Men in eight miniseries and more continues! Apocalypse has conquered half of humankind and is ready to destroy them all! Magneto and his Amazing X-Men fight to protect humans and mutants alike, only to learn from Bishop (now on his THIRD reality and counting) that his world might need to be unmade! Plus: excerpts from Apocalypse's own files on the alternate-universe X-Men, and their friends and foes...but which is which? Featuring Blink and Sabretooth of the Exiles! Collects X-MEN: ALPHA, AGE OF APOCALYPSE: THE CHOSEN, GENERATION NEXT #1, ASTONISHING X-MEN VOL. 1 #1, X-CALIBRE #1, GAMBIT AND THE X-TERNALS #1-2, WEAPON X VOL. 1 #1-2, AMAZING X-MEN #1-2, FACTOR X #1-2 and X-MAN #1
<br>376 PGS./T+ SUGGESTED FOR TEENS AND UP ...$29.99
<br>",
      "diamondCode": "",
      "digitalId": 0,
      "ean": "",
      "events": Object {
        "available": 1,
        "collectionURI": "http://gateway.marvel.com/v1/public/comics/2539/events",
        "items": Array [
          Object {
            "name": "Age of Apocalypse",
            "resourceURI": "http://gateway.marvel.com/v1/public/events/227",
          },
        ],
        "returned": 1,
      },
      "format": "Trade Paperback",
      "id": 2539,
      "images": Array [
        Object {
          "extension": "jpg",
          "path": "http://i.annihil.us/u/prod/marvel/i/mg/c/b0/4bc61dec7755f",
        },
      ],
      "isbn": "0-7851-1874-8",
      "issn": "",
      "issueNumber": 0,
      "modified": "2017-07-10T17:28:37-0400",
      "pageCount": 0,
      "prices": Array [
        Object {
          "price": 9.99,
          "type": "printPrice",
        },
      ],
      "resourceURI": "http://gateway.marvel.com/v1/public/comics/2539",
      "series": Object {
        "name": "X-Men: The Complete Age of Apocalypse Epic Book 2 (2005)",
        "resourceURI": "http://gateway.marvel.com/v1/public/series/1583",
      },
      "stories": Object {
        "available": 45,
        "collectionURI": "http://gateway.marvel.com/v1/public/comics/2539/stories",
        "items": Array [
          Object {
            "name": "A Beginning",
            "resourceURI": "http://gateway.marvel.com/v1/public/stories/26281",
            "type": "interiorStory",
          },
          Object {
            "name": "Some of Us Looking to the Stars",
            "resourceURI": "http://gateway.marvel.com/v1/public/stories/32819",
            "type": "interiorStory",
          },
          Object {
            "name": "X-Facts: The Dream is Over",
            "resourceURI": "http://gateway.marvel.com/v1/public/stories/32820",
            "type": "text article",
          },
          Object {
            "name": "Where No External Has Gone Before",
            "resourceURI": "http://gateway.marvel.com/v1/public/stories/32822",
            "type": "interiorStory",
          },
          Object {
            "name": "X-Facts: Reality Checked",
            "resourceURI": "http://gateway.marvel.com/v1/public/stories/32823",
            "type": "text article",
          },
          Object {
            "name": "[opening]",
            "resourceURI": "http://gateway.marvel.com/v1/public/stories/37493",
            "type": "",
          },
          Object {
            "name": "Magneto and Rogue",
            "resourceURI": "http://gateway.marvel.com/v1/public/stories/37494",
            "type": "",
          },
          Object {
            "name": "X-Man",
            "resourceURI": "http://gateway.marvel.com/v1/public/stories/37495",
            "type": "",
          },
          Object {
            "name": "Cyclops",
            "resourceURI": "http://gateway.marvel.com/v1/public/stories/37496",
            "type": "",
          },
          Object {
            "name": "Havok",
            "resourceURI": "http://gateway.marvel.com/v1/public/stories/37497",
            "type": "",
          },
          Object {
            "name": "Mr. Sinister",
            "resourceURI": "http://gateway.marvel.com/v1/public/stories/37498",
            "type": "",
          },
          Object {
            "name": "Storm",
            "resourceURI": "http://gateway.marvel.com/v1/public/stories/37499",
            "type": "",
          },
          Object {
            "name": "Quicksilver",
            "resourceURI": "http://gateway.marvel.com/v1/public/stories/37500",
            "type": "",
          },
          Object {
            "name": "Northstar and Aurora",
            "resourceURI": "http://gateway.marvel.com/v1/public/stories/37501",
            "type": "",
          },
          Object {
            "name": "Beast",
            "resourceURI": "http://gateway.marvel.com/v1/public/stories/37502",
            "type": "",
          },
          Object {
            "name": "The Four Horsemen",
            "resourceURI": "http://gateway.marvel.com/v1/public/stories/37503",
            "type": "",
          },
          Object {
            "name": "X-Calibre",
            "resourceURI": "http://gateway.marvel.com/v1/public/stories/37504",
            "type": "",
          },
          Object {
            "name": "The Human High Council",
            "resourceURI": "http://gateway.marvel.com/v1/public/stories/37505",
            "type": "",
          },
          Object {
            "name": "Weapon X and Jean Grey",
            "resourceURI": "http://gateway.marvel.com/v1/public/stories/37506",
            "type": "",
          },
          Object {
            "name": "Gambit and the Externals",
            "resourceURI": "http://gateway.marvel.com/v1/public/stories/37507",
            "type": "",
          },
        ],
        "returned": 20,
      },
      "textObjects": Array [
        Object {
          "language": "en-us",
          "text": "See your favorite mutants through a dark glass as the epic that literally rebuilt the X-Men in eight miniseries and more continues! Apocalypse has conquered half of humankind and is ready to destroy them all! Magneto and his Amazing X-Men fight to protect humans and mutants alike, only to learn from Bishop (now on his THIRD reality and counting) that his world might need to be unmade! Plus: excerpts from Apocalypse's own files on the alternate-universe X-Men, and their friends and foes...but which is which? Featuring Blink and Sabretooth of the Exiles! Collects X-MEN: ALPHA, AGE OF APOCALYPSE: THE CHOSEN, GENERATION NEXT #1, ASTONISHING X-MEN VOL. 1 #1, X-CALIBRE #1, GAMBIT AND THE X-TERNALS #1-2, WEAPON X VOL. 1 #1-2, AMAZING X-MEN #1-2, FACTOR X #1-2 and X-MAN #1
<br>376 PGS./T+ SUGGESTED FOR TEENS AND UP ...$29.99
<br>",
          "type": "issue_solicit_text",
        },
      ],
      "thumbnail": Object {
        "extension": "jpg",
        "path": "http://i.annihil.us/u/prod/marvel/i/mg/c/b0/4bc61dec7755f",
      },
      "title": "X-Men: The Complete Age of Apocalypse Epic Book 2 (Trade Paperback)",
      "upc": "5960611874-00111",
      "urls": Array [
        Object {
          "type": "detail",
          "url": "http://marvel.com/comics/collection/2539/x-men_the_complete_age_of_apocalypse_epic_book_2_trade_paperback?utm_campaign=apiRef&utm_source=489e135d84bbc1a810a3a8ec86eef28e",
        },
      ],
      "variantDescription": "",
      "variants": Array [],
    },
    "id": 2539,
    "type": "SET_RELATED_DATA",
  },
]
`;

exports[`Asyncs actions Function fetchMore (characters):: create 2 actions (REQUEST_POSTS & ADD_MORE) and fetch 20 more characters 1`] = `
Array [
  Object {
    "category": "characters",
    "requestId": "characters?offset=20",
    "type": "REQUEST_POSTS",
  },
  Object {
    "category": "characters",
    "data": Array [
      Object {
        "comics": Object {
          "available": 0,
          "collectionURI": "http://gateway.marvel.com/v1/public/characters/1011194/comics",
          "items": Array [],
          "returned": 0,
        },
        "description": "",
        "events": Object {
          "available": 0,
          "collectionURI": "http://gateway.marvel.com/v1/public/characters/1011194/events",
          "items": Array [],
          "returned": 0,
        },
        "id": 1011194,
        "modified": "1969-12-31T19:00:00-0500",
        "name": "Akemi",
        "resourceURI": "http://gateway.marvel.com/v1/public/characters/1011194",
        "series": Object {
          "available": 0,
          "collectionURI": "http://gateway.marvel.com/v1/public/characters/1011194/series",
          "items": Array [],
          "returned": 0,
        },
        "stories": Object {
          "available": 0,
          "collectionURI": "http://gateway.marvel.com/v1/public/characters/1011194/stories",
          "items": Array [],
          "returned": 0,
        },
        "thumbnail": Object {
          "extension": "jpg",
          "path": "http://i.annihil.us/u/prod/marvel/i/mg/b/40/image_not_available",
        },
        "urls": Array [
          Object {
            "type": "detail",
            "url": "http://marvel.com/characters/114/akemi?utm_campaign=apiRef&utm_source=dadf1ca6c54468f0ed5cdbb80d4b1f97",
          },
          Object {
            "type": "comiclink",
            "url": "http://marvel.com/comics/characters/1011194/akemi?utm_campaign=apiRef&utm_source=dadf1ca6c54468f0ed5cdbb80d4b1f97",
          },
        ],
      },
    ],
    "type": "ADD_MORE",
  },
]
`;

exports[`Asyncs actions Function fetchMore (comics):: create 2 actions (REQUEST_POSTS & ADD_MORE) and fetch 20 more comics 1`] = `
Array [
  Object {
    "category": "comics",
    "requestId": "comics?offset=20",
    "type": "REQUEST_POSTS",
  },
  Object {
    "category": "comics",
    "data": Array [
      Object {
        "characters": Object {
          "available": 4,
          "collectionURI": "http://gateway.marvel.com/v1/public/comics/16236/characters",
          "items": Array [
            Object {
              "name": "Captain America",
              "resourceURI": "http://gateway.marvel.com/v1/public/characters/1009220",
            },
            Object {
              "name": "Crossbones",
              "resourceURI": "http://gateway.marvel.com/v1/public/characters/1009252",
            },
            Object {
              "name": "Sharon Carter",
              "resourceURI": "http://gateway.marvel.com/v1/public/characters/1009228",
            },
            Object {
              "name": "Sin",
              "resourceURI": "http://gateway.marvel.com/v1/public/characters/1010898",
            },
          ],
          "returned": 4,
        },
        "collectedIssues": Array [],
        "collections": Array [],
        "creators": Object {
          "available": 9,
          "collectionURI": "http://gateway.marvel.com/v1/public/comics/16236/creators",
          "items": Array [
            Object {
              "name": "Tom Brevoort",
              "resourceURI": "http://gateway.marvel.com/v1/public/creators/2133",
              "role": "editor",
            },
            Object {
              "name": "Joe Quesada",
              "resourceURI": "http://gateway.marvel.com/v1/public/creators/3635",
              "role": "editor",
            },
            Object {
              "name": "Andy Schmidt",
              "resourceURI": "http://gateway.marvel.com/v1/public/creators/4371",
              "role": "editor",
            },
            Object {
              "name": "Lazer Sitterson",
              "resourceURI": "http://gateway.marvel.com/v1/public/creators/5255",
              "role": "editor",
            },
            Object {
              "name": "Ed Brubaker",
              "resourceURI": "http://gateway.marvel.com/v1/public/creators/367",
              "role": "writer",
            },
            Object {
              "name": "Joe Caramagna",
              "resourceURI": "http://gateway.marvel.com/v1/public/creators/5251",
              "role": "letterer",
            },
            Object {
              "name": "Frank D'Armata",
              "resourceURI": "http://gateway.marvel.com/v1/public/creators/8504",
              "role": "colorist",
            },
            Object {
              "name": "Steve Epting",
              "resourceURI": "http://gateway.marvel.com/v1/public/creators/374",
              "role": "penciler",
            },
            Object {
              "name": "Mike Perkins",
              "resourceURI": "http://gateway.marvel.com/v1/public/creators/708",
              "role": "penciler",
            },
          ],
          "returned": 9,
        },
        "dates": Array [
          Object {
            "date": "2029-12-31T00:00:00-0500",
            "type": "onsaleDate",
          },
          Object {
            "date": "-0001-11-30T00:00:00-0500",
            "type": "focDate",
          },
        ],
        "description": null,
        "diamondCode": "",
        "digitalId": 0,
        "ean": "",
        "events": Object {
          "available": 0,
          "collectionURI": "http://gateway.marvel.com/v1/public/comics/16236/events",
          "items": Array [],
          "returned": 0,
        },
        "format": "Comic",
        "id": 16236,
        "images": Array [],
        "isbn": "",
        "issn": "",
        "issueNumber": 16,
        "modified": "-0001-11-30T00:00:00-0500",
        "pageCount": 0,
        "prices": Array [
          Object {
            "price": 0,
            "type": "printPrice",
          },
        ],
        "resourceURI": "http://gateway.marvel.com/v1/public/comics/16236",
        "series": Object {
          "name": "Cap Transport (2005 - 2006)",
          "resourceURI": "http://gateway.marvel.com/v1/public/series/2722",
        },
        "stories": Object {
          "available": 2,
          "collectionURI": "http://gateway.marvel.com/v1/public/comics/16236/stories",
          "items": Array [
            Object {
              "name": "Captain America",
              "resourceURI": "http://gateway.marvel.com/v1/public/stories/33998",
              "type": "cover",
            },
            Object {
              "name": "Collision Courses Part 1 of 2",
              "resourceURI": "http://gateway.marvel.com/v1/public/stories/33999",
              "type": "interiorStory",
            },
          ],
          "returned": 2,
        },
        "textObjects": Array [],
        "thumbnail": Object {
          "extension": "jpg",
          "path": "http://i.annihil.us/u/prod/marvel/i/mg/b/40/image_not_available",
        },
        "title": "Cap Transport (2005) #16",
        "upc": "",
        "urls": Array [
          Object {
            "type": "detail",
            "url": "http://marvel.com/comics/issue/16236/cap_transport_2005_16?utm_campaign=apiRef&utm_source=dadf1ca6c54468f0ed5cdbb80d4b1f97",
          },
        ],
        "variantDescription": "",
        "variants": Array [],
      },
    ],
    "type": "ADD_MORE",
  },
]
`;

exports[`Asyncs actions Function fetchRelatedCharacters:: create 2 actions (REQUEST_RELATED_DATA & SET_RELATED_COMICS) and fetch the first 14's characters related to a comic 1`] = `
Array [
  Object {
    "id": 17486,
    "type": "REQUEST_RELATED_DATA",
  },
  Object {
    "data": Array [
      Object {
        "comics": Object {
          "available": 94,
          "collectionURI": "http://gateway.marvel.com/v1/public/characters/1009156/comics",
          "items": Array [
            Object {
              "name": "Avengers (2010) #2",
              "resourceURI": "http://gateway.marvel.com/v1/public/comics/29205",
            },
            Object {
              "name": "Avengers (2010) #3",
              "resourceURI": "http://gateway.marvel.com/v1/public/comics/29206",
            },
            Object {
              "name": "Avengers (2010) #3 (ROMITA JR. VARIANT)",
              "resourceURI": "http://gateway.marvel.com/v1/public/comics/34142",
            },
            Object {
              "name": "Cable (1993) #8",
              "resourceURI": "http://gateway.marvel.com/v1/public/comics/7459",
            },
            Object {
              "name": "Cable (2008) #14",
              "resourceURI": "http://gateway.marvel.com/v1/public/comics/24171",
            },
            Object {
              "name": "Cable (2008) #14 (OLIVETTI MW, 50/50 COVER)",
              "resourceURI": "http://gateway.marvel.com/v1/public/comics/24172",
            },
            Object {
              "name": "Cable (2008) #15",
              "resourceURI": "http://gateway.marvel.com/v1/public/comics/24631",
            },
            Object {
              "name": "Cable (2008) #15 (OLIVETTI (MW, 50/50 COVER))",
              "resourceURI": "http://gateway.marvel.com/v1/public/comics/24632",
            },
            Object {
              "name": "Cable (1993) #35",
              "resourceURI": "http://gateway.marvel.com/v1/public/comics/7410",
            },
            Object {
              "name": "Cable (1993) #66",
              "resourceURI": "http://gateway.marvel.com/v1/public/comics/7444",
            },
            Object {
              "name": "Cable (1993) #75",
              "resourceURI": "http://gateway.marvel.com/v1/public/comics/7454",
            },
            Object {
              "name": "Essential X-Factor Vol. 2 (All-New Edition) (Trade Paperback)",
              "resourceURI": "http://gateway.marvel.com/v1/public/comics/39445",
            },
            Object {
              "name": "Extraordinary X-Men Vol. 3: Kingdoms Fall (Trade Paperback)",
              "resourceURI": "http://gateway.marvel.com/v1/public/comics/55262",
            },
            Object {
              "name": "Further Adventures of Cyclops & Phoenix (1996) #4",
              "resourceURI": "http://gateway.marvel.com/v1/public/comics/60188",
            },
            Object {
              "name": "Incredible Hulk (1962) #456",
              "resourceURI": "http://gateway.marvel.com/v1/public/comics/9267",
            },
            Object {
              "name": "Mystic Comics 70th Anniversary Special (2009) #1 (MARTIN VARIANT)",
              "resourceURI": "http://gateway.marvel.com/v1/public/comics/26022",
            },
            Object {
              "name": "Official Handbook of the Marvel Universe (2004) #8",
              "resourceURI": "http://gateway.marvel.com/v1/public/comics/1489",
            },
            Object {
              "name": "Official Handbook of the Marvel Universe (2004) #9 (THE WOMEN OF MARVEL)",
              "resourceURI": "http://gateway.marvel.com/v1/public/comics/1590",
            },
            Object {
              "name": "Official Handbook of the Marvel Universe (2004) #10 (MARVEL KNIGHTS)",
              "resourceURI": "http://gateway.marvel.com/v1/public/comics/1689",
            },
            Object {
              "name": "Official Handbook of the Marvel Universe (2004) #11 (X-MEN - AGE OF APOCALYPSE)",
              "resourceURI": "http://gateway.marvel.com/v1/public/comics/1749",
            },
          ],
          "returned": 20,
        },
        "description": "",
        "events": Object {
          "available": 6,
          "collectionURI": "http://gateway.marvel.com/v1/public/characters/1009156/events",
          "items": Array [
            Object {
              "name": "Acts of Vengeance!",
              "resourceURI": "http://gateway.marvel.com/v1/public/events/116",
            },
            Object {
              "name": "Age of Apocalypse",
              "resourceURI": "http://gateway.marvel.com/v1/public/events/227",
            },
            Object {
              "name": "Evolutionary War",
              "resourceURI": "http://gateway.marvel.com/v1/public/events/246",
            },
            Object {
              "name": "Fall of the Mutants",
              "resourceURI": "http://gateway.marvel.com/v1/public/events/248",
            },
            Object {
              "name": "Messiah War",
              "resourceURI": "http://gateway.marvel.com/v1/public/events/298",
            },
            Object {
              "name": "Onslaught",
              "resourceURI": "http://gateway.marvel.com/v1/public/events/154",
            },
          ],
          "returned": 6,
        },
        "id": 1009156,
        "modified": "2013-10-18T12:48:43-0400",
        "name": "Apocalypse",
        "resourceURI": "http://gateway.marvel.com/v1/public/characters/1009156",
        "series": Object {
          "available": 48,
          "collectionURI": "http://gateway.marvel.com/v1/public/characters/1009156/series",
          "items": Array [
            Object {
              "name": "Avengers (2010 - 2012)",
              "resourceURI": "http://gateway.marvel.com/v1/public/series/9085",
            },
            Object {
              "name": "Cable (1993 - 2002)",
              "resourceURI": "http://gateway.marvel.com/v1/public/series/1995",
            },
            Object {
              "name": "Cable (2008 - 2010)",
              "resourceURI": "http://gateway.marvel.com/v1/public/series/4002",
            },
            Object {
              "name": "Essential X-Factor Vol. 2 (All-New Edition) (2011 - Present)",
              "resourceURI": "http://gateway.marvel.com/v1/public/series/14400",
            },
            Object {
              "name": "Extraordinary X-Men Vol. 3: Kingdoms Fall (2017)",
              "resourceURI": "http://gateway.marvel.com/v1/public/series/20418",
            },
            Object {
              "name": "Further Adventures of Cyclops & Phoenix (1996)",
              "resourceURI": "http://gateway.marvel.com/v1/public/series/22173",
            },
            Object {
              "name": "Incredible Hulk (1962 - 1999)",
              "resourceURI": "http://gateway.marvel.com/v1/public/series/2021",
            },
            Object {
              "name": "Mystic Comics 70th Anniversary Special (2009)",
              "resourceURI": "http://gateway.marvel.com/v1/public/series/8138",
            },
            Object {
              "name": "Official Handbook of the Marvel Universe (2004)",
              "resourceURI": "http://gateway.marvel.com/v1/public/series/787",
            },
            Object {
              "name": "Onslaught: Marvel Universe (1996)",
              "resourceURI": "http://gateway.marvel.com/v1/public/series/2057",
            },
            Object {
              "name": "Rise of Apocalypse (1996 - 1997)",
              "resourceURI": "http://gateway.marvel.com/v1/public/series/22174",
            },
            Object {
              "name": "Stryfe's Strike File (1993)",
              "resourceURI": "http://gateway.marvel.com/v1/public/series/17927",
            },
            Object {
              "name": "Uncanny Avengers (2012 - Present)",
              "resourceURI": "http://gateway.marvel.com/v1/public/series/16414",
            },
            Object {
              "name": "Uncanny X-Force (2010 - 2012)",
              "resourceURI": "http://gateway.marvel.com/v1/public/series/9976",
            },
            Object {
              "name": "Uncanny X-Men (1963 - 2011)",
              "resourceURI": "http://gateway.marvel.com/v1/public/series/2258",
            },
            Object {
              "name": "What If? X-Men Age of Apocalypse (2006)",
              "resourceURI": "http://gateway.marvel.com/v1/public/series/1075",
            },
            Object {
              "name": "What If?: Event Horizon (2007)",
              "resourceURI": "http://gateway.marvel.com/v1/public/series/2425",
            },
            Object {
              "name": "Wolverine (1988 - 2003)",
              "resourceURI": "http://gateway.marvel.com/v1/public/series/2262",
            },
            Object {
              "name": "Wolverine/Deadpool: Weapon X (1999)",
              "resourceURI": "http://gateway.marvel.com/v1/public/series/84",
            },
            Object {
              "name": "Wolverine: The Jungle Adventure (1989)",
              "resourceURI": "http://gateway.marvel.com/v1/public/series/23663",
            },
          ],
          "returned": 20,
        },
        "stories": Object {
          "available": 94,
          "collectionURI": "http://gateway.marvel.com/v1/public/characters/1009156/stories",
          "items": Array [
            Object {
              "name": "Cover #477",
              "resourceURI": "http://gateway.marvel.com/v1/public/stories/477",
              "type": "cover",
            },
            Object {
              "name": "X-MEN (2004) #183",
              "resourceURI": "http://gateway.marvel.com/v1/public/stories/664",
              "type": "cover",
            },
            Object {
              "name": "X-MEN (2004) #184",
              "resourceURI": "http://gateway.marvel.com/v1/public/stories/666",
              "type": "cover",
            },
            Object {
              "name": "X-MEN (2004) #185",
              "resourceURI": "http://gateway.marvel.com/v1/public/stories/668",
              "type": "cover",
            },
            Object {
              "name": "Cover #4153",
              "resourceURI": "http://gateway.marvel.com/v1/public/stories/4153",
              "type": "cover",
            },
            Object {
              "name": "Cover #4223",
              "resourceURI": "http://gateway.marvel.com/v1/public/stories/4223",
              "type": "cover",
            },
            Object {
              "name": "Cover #4430",
              "resourceURI": "http://gateway.marvel.com/v1/public/stories/4430",
              "type": "cover",
            },
            Object {
              "name": "Cover #4513",
              "resourceURI": "http://gateway.marvel.com/v1/public/stories/4513",
              "type": "cover",
            },
            Object {
              "name": "Cover #4612",
              "resourceURI": "http://gateway.marvel.com/v1/public/stories/4612",
              "type": "cover",
            },
            Object {
              "name": "Cover #4614",
              "resourceURI": "http://gateway.marvel.com/v1/public/stories/4614",
              "type": "cover",
            },
            Object {
              "name": "Cover #5919",
              "resourceURI": "http://gateway.marvel.com/v1/public/stories/5919",
              "type": "cover",
            },
            Object {
              "name": "...Meet War!",
              "resourceURI": "http://gateway.marvel.com/v1/public/stories/19075",
              "type": "cover",
            },
            Object {
              "name": "Whose Death Is It, Anyway?",
              "resourceURI": "http://gateway.marvel.com/v1/public/stories/22203",
              "type": "interiorStory",
            },
            Object {
              "name": "Die, Mutants, Die!",
              "resourceURI": "http://gateway.marvel.com/v1/public/stories/22207",
              "type": "interiorStory",
            },
            Object {
              "name": "The Horsemen of Apocalypse",
              "resourceURI": "http://gateway.marvel.com/v1/public/stories/22210",
              "type": "cover",
            },
            Object {
              "name": "You Say You Want Some Evolution?",
              "resourceURI": "http://gateway.marvel.com/v1/public/stories/22221",
              "type": "interiorStory",
            },
            Object {
              "name": "Fall of the Mutants",
              "resourceURI": "http://gateway.marvel.com/v1/public/stories/22222",
              "type": "cover",
            },
            Object {
              "name": "Fall of the Mutants",
              "resourceURI": "http://gateway.marvel.com/v1/public/stories/22224",
              "type": "cover",
            },
            Object {
              "name": "Gifts!",
              "resourceURI": "http://gateway.marvel.com/v1/public/stories/22229",
              "type": "interiorStory",
            },
            Object {
              "name": "Guardian",
              "resourceURI": "http://gateway.marvel.com/v1/public/stories/22273",
              "type": "interiorStory",
            },
          ],
          "returned": 20,
        },
        "thumbnail": Object {
          "extension": "jpg",
          "path": "http://i.annihil.us/u/prod/marvel/i/mg/f/e0/526166076a1d0",
        },
        "urls": Array [
          Object {
            "type": "detail",
            "url": "http://marvel.com/comics/characters/1009156/apocalypse?utm_campaign=apiRef&utm_source=dadf1ca6c54468f0ed5cdbb80d4b1f97",
          },
          Object {
            "type": "wiki",
            "url": "http://marvel.com/universe/Apocalypse_(En_Sabah_Nur)?utm_campaign=apiRef&utm_source=dadf1ca6c54468f0ed5cdbb80d4b1f97",
          },
          Object {
            "type": "comiclink",
            "url": "http://marvel.com/comics/characters/1009156/apocalypse?utm_campaign=apiRef&utm_source=dadf1ca6c54468f0ed5cdbb80d4b1f97",
          },
        ],
      },
    ],
    "id": 17486,
    "type": "SET_RELATED_COMICS",
  },
]
`;

exports[`Asyncs actions Function fetchRelatedComics:: create 2 actions (REQUEST_RELATED_DATA & SET_RELATED_COMICS) and fetch 8 comics related to a character 1`] = `
Array [
  Object {
    "id": 1009149,
    "type": "REQUEST_RELATED_DATA",
  },
  Object {
    "data": Array [
      Object {
        "characters": Object {
          "available": 39,
          "collectionURI": "http://gateway.marvel.com/v1/public/comics/2539/characters",
          "items": Array [
            Object {
              "name": "Abyss",
              "resourceURI": "http://gateway.marvel.com/v1/public/characters/1009149",
            },
            Object {
              "name": "Abyss (Age of Apocalypse)",
              "resourceURI": "http://gateway.marvel.com/v1/public/characters/1010903",
            },
            Object {
              "name": "Apocalypse",
              "resourceURI": "http://gateway.marvel.com/v1/public/characters/1009156",
            },
            Object {
              "name": "Archangel",
              "resourceURI": "http://gateway.marvel.com/v1/public/characters/1009159",
            },
            Object {
              "name": "Aurora",
              "resourceURI": "http://gateway.marvel.com/v1/public/characters/1009163",
            },
            Object {
              "name": "Beast",
              "resourceURI": "http://gateway.marvel.com/v1/public/characters/1009175",
            },
            Object {
              "name": "Bishop",
              "resourceURI": "http://gateway.marvel.com/v1/public/characters/1009182",
            },
            Object {
              "name": "Blink",
              "resourceURI": "http://gateway.marvel.com/v1/public/characters/1009197",
            },
            Object {
              "name": "Blob",
              "resourceURI": "http://gateway.marvel.com/v1/public/characters/1009199",
            },
            Object {
              "name": "Captain Britain",
              "resourceURI": "http://gateway.marvel.com/v1/public/characters/1009223",
            },
            Object {
              "name": "Colossus",
              "resourceURI": "http://gateway.marvel.com/v1/public/characters/1009243",
            },
            Object {
              "name": "Cyclops",
              "resourceURI": "http://gateway.marvel.com/v1/public/characters/1009257",
            },
            Object {
              "name": "Emma Frost",
              "resourceURI": "http://gateway.marvel.com/v1/public/characters/1009310",
            },
            Object {
              "name": "Gambit",
              "resourceURI": "http://gateway.marvel.com/v1/public/characters/1009313",
            },
            Object {
              "name": "Havok",
              "resourceURI": "http://gateway.marvel.com/v1/public/characters/1009337",
            },
            Object {
              "name": "Holocaust (Age of Apocalypse)",
              "resourceURI": "http://gateway.marvel.com/v1/public/characters/1009349",
            },
            Object {
              "name": "Iceman",
              "resourceURI": "http://gateway.marvel.com/v1/public/characters/1009362",
            },
            Object {
              "name": "Jean Grey",
              "resourceURI": "http://gateway.marvel.com/v1/public/characters/1009327",
            },
            Object {
              "name": "Magma (Amara Aquilla)",
              "resourceURI": "http://gateway.marvel.com/v1/public/characters/1009416",
            },
            Object {
              "name": "Magneto",
              "resourceURI": "http://gateway.marvel.com/v1/public/characters/1009417",
            },
          ],
          "returned": 20,
        },
        "collectedIssues": Array [
          Object {
            "name": "Amazing X-Men (1995) #2",
            "resourceURI": "http://gateway.marvel.com/v1/public/comics/17732",
          },
          Object {
            "name": "Factor X (1995) #2",
            "resourceURI": "http://gateway.marvel.com/v1/public/comics/20045",
          },
          Object {
            "name": "Age of Apocalypse: The Chosen (1995) #1",
            "resourceURI": "http://gateway.marvel.com/v1/public/comics/17701",
          },
          Object {
            "name": "Weapon X (1995) #2",
            "resourceURI": "http://gateway.marvel.com/v1/public/comics/18100",
          },
          Object {
            "name": "Gambit and the X-Ternals (1995) #2",
            "resourceURI": "http://gateway.marvel.com/v1/public/comics/16078",
          },
          Object {
            "name": "Gambit and the X-Ternals (1995) #1",
            "resourceURI": "http://gateway.marvel.com/v1/public/comics/16077",
          },
          Object {
            "name": "Weapon X (1995) #1",
            "resourceURI": "http://gateway.marvel.com/v1/public/comics/18099",
          },
          Object {
            "name": "Generation Next (1995) #1",
            "resourceURI": "http://gateway.marvel.com/v1/public/comics/20038",
          },
          Object {
            "name": "Amazing X-Men (1995) #1",
            "resourceURI": "http://gateway.marvel.com/v1/public/comics/17731",
          },
          Object {
            "name": "X-Calibre (1995) #1",
            "resourceURI": "http://gateway.marvel.com/v1/public/comics/18253",
          },
          Object {
            "name": "Factor X (1995) #1",
            "resourceURI": "http://gateway.marvel.com/v1/public/comics/20044",
          },
          Object {
            "name": "X-Men: Alpha (1995) #1",
            "resourceURI": "http://gateway.marvel.com/v1/public/comics/12386",
          },
        ],
        "collections": Array [],
        "creators": Object {
          "available": 53,
          "collectionURI": "http://gateway.marvel.com/v1/public/comics/2539/creators",
          "items": Array [
            Object {
              "name": "Comicraft",
              "resourceURI": "http://gateway.marvel.com/v1/public/creators/807",
              "role": "letterer",
            },
            Object {
              "name": "Pat Brosseau",
              "resourceURI": "http://gateway.marvel.com/v1/public/creators/3626",
              "role": "letterer",
            },
            Object {
              "name": "Chris Eliopoulos",
              "resourceURI": "http://gateway.marvel.com/v1/public/creators/452",
              "role": "letterer",
            },
            Object {
              "name": "Toinay",
              "resourceURI": "http://gateway.marvel.com/v1/public/creators/5991",
              "role": "inker",
            },
            Object {
              "name": "Terry Austin",
              "resourceURI": "http://gateway.marvel.com/v1/public/creators/1836",
              "role": "inker",
            },
            Object {
              "name": "Mark Buckingham",
              "resourceURI": "http://gateway.marvel.com/v1/public/creators/71",
              "role": "inker",
            },
            Object {
              "name": "Kevin Conrad",
              "resourceURI": "http://gateway.marvel.com/v1/public/creators/972",
              "role": "inker",
            },
            Object {
              "name": "Chris Bachalo",
              "resourceURI": "http://gateway.marvel.com/v1/public/creators/232",
              "role": "penciler",
            },
            Object {
              "name": "Ian Churchill",
              "resourceURI": "http://gateway.marvel.com/v1/public/creators/1192",
              "role": "penciler",
            },
            Object {
              "name": "Tony Daniel",
              "resourceURI": "http://gateway.marvel.com/v1/public/creators/354",
              "role": "penciler",
            },
            Object {
              "name": "Steve Buccellato",
              "resourceURI": "http://gateway.marvel.com/v1/public/creators/1909",
              "role": "colorist",
            },
            Object {
              "name": "Digital Chameleon",
              "resourceURI": "http://gateway.marvel.com/v1/public/creators/2974",
              "role": "colorist",
            },
            Object {
              "name": "Electric Crayon",
              "resourceURI": "http://gateway.marvel.com/v1/public/creators/4101",
              "role": "colorist",
            },
            Object {
              "name": "Kelly Corvese",
              "resourceURI": "http://gateway.marvel.com/v1/public/creators/3572",
              "role": "editor",
            },
            Object {
              "name": "Tom DeFalco",
              "resourceURI": "http://gateway.marvel.com/v1/public/creators/9565",
              "role": "editor",
            },
            Object {
              "name": "Suzanne Gaffney",
              "resourceURI": "http://gateway.marvel.com/v1/public/creators/2099",
              "role": "editor",
            },
            Object {
              "name": "Jaye Gardner",
              "resourceURI": "http://gateway.marvel.com/v1/public/creators/2520",
              "role": "editor",
            },
            Object {
              "name": "Roger Cruz",
              "resourceURI": "http://gateway.marvel.com/v1/public/creators/356",
              "role": "penciller",
            },
            Object {
              "name": "Steve Epting",
              "resourceURI": "http://gateway.marvel.com/v1/public/creators/374",
              "role": "penciller",
            },
            Object {
              "name": "Warren Ellis",
              "resourceURI": "http://gateway.marvel.com/v1/public/creators/676",
              "role": "writer",
            },
          ],
          "returned": 20,
        },
        "dates": Array [
          Object {
            "date": "2005-10-05T00:00:00-0400",
            "type": "onsaleDate",
          },
          Object {
            "date": "-0001-11-30T00:00:00-0500",
            "type": "focDate",
          },
        ],
        "description": "See your favorite mutants through a dark glass as the epic that literally rebuilt the X-Men in eight miniseries and more continues! Apocalypse has conquered half of humankind and is ready to destroy them all! Magneto and his Amazing X-Men fight to protect humans and mutants alike, only to learn from Bishop (now on his THIRD reality and counting) that his world might need to be unmade! Plus: excerpts from Apocalypse's own files on the alternate-universe X-Men, and their friends and foes...but which is which? Featuring Blink and Sabretooth of the Exiles! Collects X-MEN: ALPHA, AGE OF APOCALYPSE: THE CHOSEN, GENERATION NEXT #1, ASTONISHING X-MEN VOL. 1 #1, X-CALIBRE #1, GAMBIT AND THE X-TERNALS #1-2, WEAPON X VOL. 1 #1-2, AMAZING X-MEN #1-2, FACTOR X #1-2 and X-MAN #1
<br>376 PGS./T+ SUGGESTED FOR TEENS AND UP ...$29.99
<br>",
        "diamondCode": "",
        "digitalId": 0,
        "ean": "",
        "events": Object {
          "available": 1,
          "collectionURI": "http://gateway.marvel.com/v1/public/comics/2539/events",
          "items": Array [
            Object {
              "name": "Age of Apocalypse",
              "resourceURI": "http://gateway.marvel.com/v1/public/events/227",
            },
          ],
          "returned": 1,
        },
        "format": "Trade Paperback",
        "id": 2539,
        "images": Array [
          Object {
            "extension": "jpg",
            "path": "http://i.annihil.us/u/prod/marvel/i/mg/c/b0/4bc61dec7755f",
          },
        ],
        "isbn": "0-7851-1874-8",
        "issn": "",
        "issueNumber": 0,
        "modified": "2017-07-10T17:28:37-0400",
        "pageCount": 0,
        "prices": Array [
          Object {
            "price": 9.99,
            "type": "printPrice",
          },
        ],
        "resourceURI": "http://gateway.marvel.com/v1/public/comics/2539",
        "series": Object {
          "name": "X-Men: The Complete Age of Apocalypse Epic Book 2 (2005)",
          "resourceURI": "http://gateway.marvel.com/v1/public/series/1583",
        },
        "stories": Object {
          "available": 45,
          "collectionURI": "http://gateway.marvel.com/v1/public/comics/2539/stories",
          "items": Array [
            Object {
              "name": "A Beginning",
              "resourceURI": "http://gateway.marvel.com/v1/public/stories/26281",
              "type": "interiorStory",
            },
            Object {
              "name": "Some of Us Looking to the Stars",
              "resourceURI": "http://gateway.marvel.com/v1/public/stories/32819",
              "type": "interiorStory",
            },
            Object {
              "name": "X-Facts: The Dream is Over",
              "resourceURI": "http://gateway.marvel.com/v1/public/stories/32820",
              "type": "text article",
            },
            Object {
              "name": "Where No External Has Gone Before",
              "resourceURI": "http://gateway.marvel.com/v1/public/stories/32822",
              "type": "interiorStory",
            },
            Object {
              "name": "X-Facts: Reality Checked",
              "resourceURI": "http://gateway.marvel.com/v1/public/stories/32823",
              "type": "text article",
            },
            Object {
              "name": "[opening]",
              "resourceURI": "http://gateway.marvel.com/v1/public/stories/37493",
              "type": "",
            },
            Object {
              "name": "Magneto and Rogue",
              "resourceURI": "http://gateway.marvel.com/v1/public/stories/37494",
              "type": "",
            },
            Object {
              "name": "X-Man",
              "resourceURI": "http://gateway.marvel.com/v1/public/stories/37495",
              "type": "",
            },
            Object {
              "name": "Cyclops",
              "resourceURI": "http://gateway.marvel.com/v1/public/stories/37496",
              "type": "",
            },
            Object {
              "name": "Havok",
              "resourceURI": "http://gateway.marvel.com/v1/public/stories/37497",
              "type": "",
            },
            Object {
              "name": "Mr. Sinister",
              "resourceURI": "http://gateway.marvel.com/v1/public/stories/37498",
              "type": "",
            },
            Object {
              "name": "Storm",
              "resourceURI": "http://gateway.marvel.com/v1/public/stories/37499",
              "type": "",
            },
            Object {
              "name": "Quicksilver",
              "resourceURI": "http://gateway.marvel.com/v1/public/stories/37500",
              "type": "",
            },
            Object {
              "name": "Northstar and Aurora",
              "resourceURI": "http://gateway.marvel.com/v1/public/stories/37501",
              "type": "",
            },
            Object {
              "name": "Beast",
              "resourceURI": "http://gateway.marvel.com/v1/public/stories/37502",
              "type": "",
            },
            Object {
              "name": "The Four Horsemen",
              "resourceURI": "http://gateway.marvel.com/v1/public/stories/37503",
              "type": "",
            },
            Object {
              "name": "X-Calibre",
              "resourceURI": "http://gateway.marvel.com/v1/public/stories/37504",
              "type": "",
            },
            Object {
              "name": "The Human High Council",
              "resourceURI": "http://gateway.marvel.com/v1/public/stories/37505",
              "type": "",
            },
            Object {
              "name": "Weapon X and Jean Grey",
              "resourceURI": "http://gateway.marvel.com/v1/public/stories/37506",
              "type": "",
            },
            Object {
              "name": "Gambit and the Externals",
              "resourceURI": "http://gateway.marvel.com/v1/public/stories/37507",
              "type": "",
            },
          ],
          "returned": 20,
        },
        "textObjects": Array [
          Object {
            "language": "en-us",
            "text": "See your favorite mutants through a dark glass as the epic that literally rebuilt the X-Men in eight miniseries and more continues! Apocalypse has conquered half of humankind and is ready to destroy them all! Magneto and his Amazing X-Men fight to protect humans and mutants alike, only to learn from Bishop (now on his THIRD reality and counting) that his world might need to be unmade! Plus: excerpts from Apocalypse's own files on the alternate-universe X-Men, and their friends and foes...but which is which? Featuring Blink and Sabretooth of the Exiles! Collects X-MEN: ALPHA, AGE OF APOCALYPSE: THE CHOSEN, GENERATION NEXT #1, ASTONISHING X-MEN VOL. 1 #1, X-CALIBRE #1, GAMBIT AND THE X-TERNALS #1-2, WEAPON X VOL. 1 #1-2, AMAZING X-MEN #1-2, FACTOR X #1-2 and X-MAN #1
<br>376 PGS./T+ SUGGESTED FOR TEENS AND UP ...$29.99
<br>",
            "type": "issue_solicit_text",
          },
        ],
        "thumbnail": Object {
          "extension": "jpg",
          "path": "http://i.annihil.us/u/prod/marvel/i/mg/c/b0/4bc61dec7755f",
        },
        "title": "X-Men: The Complete Age of Apocalypse Epic Book 2 (Trade Paperback)",
        "upc": "5960611874-00111",
        "urls": Array [
          Object {
            "type": "detail",
            "url": "http://marvel.com/comics/collection/2539/x-men_the_complete_age_of_apocalypse_epic_book_2_trade_paperback?utm_campaign=apiRef&utm_source=dadf1ca6c54468f0ed5cdbb80d4b1f97",
          },
        ],
        "variantDescription": "",
        "variants": Array [],
      },
    ],
    "id": 1009149,
    "type": "SET_RELATED_COMICS",
  },
]
`;
